added well being 1/2 of crud

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
             "name": "daysSince",
             "database": "db.sqlite3"
         }
-    ]
+    ],
+    "python.pythonPath": "/home/useradd/.local/share/virtualenvs/days_since_server-fS4yGMlh/bin/python"
 }
