--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
         {
             "previewLimit": 50,
             "driver": "SQLite",
-            "name": "daysSince",
+            "name": "dayssince",
             "database": "db.sqlite3"
         }
     ],
